{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 112,
  "lineage": "d7de2be7-e779-e150-77bf-a35cb532d55d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418281414:internet-gateway/igw-0d1dead2085a0f3fc",
            "id": "igw-0d1dead2085a0f3fc",
            "owner_id": "905418281414",
            "tags": {
              "Name": "main_oregon"
            },
            "tags_all": {
              "Name": "main_oregon"
            },
            "vpc_id": "vpc-0ff002aa6b28babd1"
          },
          "dependencies": [
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418281414:internet-gateway/igw-0c7a2075b70301652",
            "id": "igw-0c7a2075b70301652",
            "owner_id": "905418281414",
            "tags": {
              "Name": "main_virginia"
            },
            "tags_all": {
              "Name": "main_virginia"
            },
            "vpc_id": "vpc-0eefea074b0bfcada"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_route_table_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418281414:route-table/rtb-0af4e2ae33f2cdd3f",
            "id": "rtb-0af4e2ae33f2cdd3f",
            "owner_id": "905418281414",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1dead2085a0f3fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff002aa6b28babd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_oregon",
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_virginia_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418281414:route-table/rtb-0133a0ff69b6a55f1",
            "id": "rtb-0133a0ff69b6a55f1",
            "owner_id": "905418281414",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7a2075b70301652",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_oregon"
            },
            "tags_all": {
              "Name": "route_table_oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eefea074b0bfcada"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4a7af4c18d86063",
            "route_table_id": "rtb-0133a0ff69b6a55f1",
            "subnet_id": "subnet-09933936454bb1108"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_virginia",
            "aws_route_table.route_table_virginia_public",
            "aws_subnet.subnet_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418281414:subnet/subnet-0fe4ef96a1a86b0aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe4ef96a1a86b0aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418281414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ff002aa6b28babd1"
          },
          "dependencies": [
            "aws_vpc.vpc_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418281414:subnet/subnet-09933936454bb1108",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09933936454bb1108",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418281414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0eefea074b0bfcada"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418281414:vpc/vpc-0ff002aa6b28babd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00f8b336e5ea2a5c9",
            "default_route_table_id": "rtb-0ee2d84d9952fc23d",
            "default_security_group_id": "sg-060ad8df7b627cc60",
            "dhcp_options_id": "dopt-05c1208f72dbb9039",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff002aa6b28babd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee2d84d9952fc23d",
            "owner_id": "905418281414"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418281414:vpc/vpc-0eefea074b0bfcada",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f8814e29d1b8900",
            "default_route_table_id": "rtb-0133a0ff69b6a55f1",
            "default_security_group_id": "sg-0f6206161902f3093",
            "dhcp_options_id": "dopt-05a20b904128d3713",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eefea074b0bfcada",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0133a0ff69b6a55f1",
            "owner_id": "905418281414"
          }
        }
      ]
    }
  ]
}